Adds title page with supervisors and examiners

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -1,7 +1,11 @@
 \documentclass{ecsdocs/ecsgdp}
 
+\title{TEST TITLE}
+\supervisor{Dr. Geoff Merrett \\ Dr. Alex Weddell}
+\examiner{Dr. Klaus-Peter Zauner}
+
 \begin{document}
-	
+	\maketitle
 	test
 	
 \end{document}
