--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -1,11 +1,45 @@
-\documentclass{ecsdocs/ecsgdp}
-
-\title{TEST TITLE}
-\supervisor{Dr. Geoff Merrett \\ Dr. Alex Weddell}
-\examiner{Dr. Klaus-Peter Zauner}
-
+%% ----------------------------------------------------------------
+%% GDP.tex
+%% ---------------------------------------------------------------- 
+\documentclass{ecsdocs/ecsgdp}         % Use the GDP Report Style
+\graphicspath{{../Figures/}}   % Location of your graphics files
+\usepackage{natbib}            % Use Natbib style for the refs.
+\hypersetup{colorlinks=true}   % Set to false for black/white printing
+%\input{Definitions}            % Include your abbreviations
+%% ----------------------------------------------------------------
 \begin{document}
+	\frontmatter
+	\title{TEST TITLE}
+	\authors    {\texorpdfstring
+		{\href{mailto:S.R.Gunn@ecs.soton.ac.uk}{Steve R. Gunn}}
+		{Steve R. Gunn}
+	}
+	\addresses  {\groupname\\\deptname\\\univname}
+	\date       {\today}
+	\subject    {}
+	\keywords   {}
+	\supervisor{Dr. Geoff Merrett \\ Dr. Alex Weddell}
+	\examiner{Dr. Klaus-Peter Zauner}
+	\degree     {Master of Engineering}
 	\maketitle
-	test
-	
+	\begin{abstract}
+		This work is all about \dots
+	\end{abstract}
+	\tableofcontents
+	\listoffigures
+	\listoftables
+	\lstlistoflistings
+	\listofsymbols{ll}{$w$ & The weight vector}
+	\acknowledgements{Thanks to no one.}
+	\dedicatory{To \dots}
+	\mainmatter
+	%% ----------------------------------------------------------------
+	\include{Introduction}
+	\include{Conclusions}
+	\appendix
+	\include{AppendixA}
+	\backmatter
+	\bibliographystyle{ecs}
+	\bibliography{ECS}
 \end{document}
+%% ----------------------------------------------------------------
