Update report with a chapter and update gitignore

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -30,14 +30,14 @@
 	\listoftables
 	\lstlistoflistings
 	\listofsymbols{ll}{$w$ & The weight vector}
-	\acknowledgements{Thanks to no one.}
-	\dedicatory{To \dots}
+	%\acknowledgements{Thanks to no one.}
+	%\dedicatory{To \dots}
 	\mainmatter
 	%% ----------------------------------------------------------------
-	\include{Introduction}
-	\include{Conclusions}
+	\input{software/software}
+	\input{software/machine-learning}
 	\appendix
-	\include{AppendixA}
+	%
 	\backmatter
 	\bibliographystyle{ecs}
 	\bibliography{ECS}
