Add some chapter shells

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -34,7 +34,12 @@
 	%\dedicatory{To \dots}
 	\mainmatter
 	%% ----------------------------------------------------------------
+	% Introduction chapter
+	\input{intro/intro}
+	
+	% Software chapter
 	\input{software/software}
+	\input{software/exercise-detection}
 	\input{software/machine-learning}
 	\appendix
 	%
