--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -4,6 +4,7 @@
 \documentclass{ecsdocs/ecsgdp}         % Use the GDP Report Style
 \graphicspath{{../Figures/}}   % Location of your graphics files
 \usepackage{natbib}            % Use Natbib style for the refs.
+\usepackage{array}
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
 %% ----------------------------------------------------------------
