Add bib support, including sample citation

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -45,7 +45,7 @@
 	\appendix
 	%
 	\backmatter
-	\bibliographystyle{ecs}
-	\bibliography{ECS}
+	\bibliographystyle{../../bibtex/bst/ecsdocs/ecs}
+	\bibliography{bib}
 \end{document}
 %% ----------------------------------------------------------------
