--- a/tex/latex/software/exercise-detection.tex
+++ b/tex/latex/software/exercise-detection.tex
@@ -5,3 +5,5 @@
 % Blah blah can use machine learning
 % Papers A, B and C use machine learning
 % Machine learning is good, use machine learning
+
+Something \cite{kwapisz2011activity}
