--- a/tex/latex/apendicies/risks.tex
+++ b/tex/latex/apendicies/risks.tex
@@ -1,5 +1,8 @@
-\section{Risk Assessment}
+\chapter{Risk Assessment}
 
+The project''s risk assessment is shown opposite, with a red/amber/green traffic  light scheme supporting the impact scores for ease of reference.
+
+\begin{landscape}
 \begin{center}
 \begin{tabular}{ | m{2cm} | m{4cm} | m{1cm} | m{1cm} | m{1cm} | m{5cm} | } 
   \hline
@@ -63,3 +66,4 @@
  
 \end{tabular}
 \end{center}
+\end{landscape}
