--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -5,6 +5,7 @@
 \graphicspath{{../Figures/}}   % Location of your graphics files
 \usepackage{natbib}            % Use Natbib style for the refs.
 \usepackage{array}
+\usepackage{lscape}
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
 %% ----------------------------------------------------------------
@@ -43,6 +44,7 @@
 	\input{software/exercise-detection}
 	\input{software/machine-learning}
 	\appendix
+	\input{apendicies/risks}
 	%
 	\backmatter
 	\bibliographystyle{../../bibtex/bst/ecsdocs/ecs}
