--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -5,7 +5,7 @@
 \graphicspath{{../Figures/}}   % Location of your graphics files
 \usepackage{natbib}            % Use Natbib style for the refs.
 \usepackage{array}
-\usepackage{lscape}
+\usepackage{pdflscape}
 \usepackage{enumitem}       % For making numbered indent lists
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
