Fixed my stupid spelling of appendices

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -45,7 +45,7 @@
 	\input{software/exercise-detection}
 	\input{software/machine-learning}
 	\appendix
-	\input{apendicies/risks}
+	\input{appendices/risks}
 	%
 	\backmatter
 	\bibliographystyle{../../bibtex/bst/ecsdocs/ecs}
