Update exercise-detection and bib

--- a/tex/latex/bib.bib
+++ b/tex/latex/bib.bib
@@ -1,3 +1,4 @@
+Speaks about recognising a series of activities using mobile phones
 @article{kwapisz2011activity,
   title={Activity recognition using cell phone accelerometers},
   author={Kwapisz, Jennifer R and Weiss, Gary M and Moore, Samuel A},
@@ -7,4 +8,14 @@
   pages={74--82},
   year={2011},
   publisher={ACM}
+}
+
+Speaks about the feasibility of recognising foot gestures using an accelerometer in the pocket. Comes to the conclusion that it can work quite well, but could not be performed on a 2010's mobile phone - would not work well on the device
+@inproceedings{scott2010sensing,
+	title={Sensing foot gestures from the pocket},
+	author={Scott, Jeremy and Dearman, David and Yatani, Koji and Truong, Khai N},
+	booktitle={Proceedings of the 23nd annual ACM symposium on User interface software and technology},
+	pages={199--208},
+	year={2010},
+	organization={ACM}
 }
