--- a/tex/latex/software/exercise-detection.tex
+++ b/tex/latex/software/exercise-detection.tex
@@ -1,4 +1,4 @@
-\section{Exercise Detection}
+\namedsection{Exercise Detection}{Daniel Playle}
 % This section discusses the exercise detection aspects of the software
 % You can probably see where this is going...
 % Blah blah can do exercise detection with X
@@ -6,4 +6,8 @@
 % Papers A, B and C use machine learning
 % Machine learning is good, use machine learning
 
-Something \cite{kwapisz2011activity}
+	% Exercise detection is required
+	% Several methods of detecting exercise
+	% 
+	
+	Exercise detection is a key aspect of the of the project, and a focus on foot exercises was required. 
