--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -44,6 +44,30 @@
 	\input{software/software}
 	\input{software/exercise-detection}
 	\input{software/machine-learning}
+
+	% Hardware chapter
+	\input{hardware/hardware}
+	\input{hardware/cortex}
+	\input{hardware/research}
+	\input{hardware/fpga}
+	\input{hardware/mbed}
+
+	% User study chapter
+	\input{study/study}
+
+	% Project management chapter
+	\input{management/management}
+	\input{management/planning}
+	\input{management/division}
+	\input{management/gantt}
+	\input{management/client}
+
+	% Results chapter
+	\input{results/results}
+
+	% Conclusion chapter
+	\input{conclusion/conclusion}
+
 	\appendix
 	\input{appendices/risks}
 	%
