--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -12,7 +12,7 @@
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
-\newcommand{\namedsection}[2]{\section{#1 \hfill {\small \color{gray} #2}}} % Use this to create sections with authorship: \namedsection{Section Name}{Your name}
+\newcommand{\namedsection}[2]{\section[#1]{#1 \hfill {\small \color{gray} #2}}} % Use this to create sections with authorship: \namedsection{Section Name}{Your name}
 %% ----------------------------------------------------------------
 \begin{document}
 	\frontmatter
