Replace non-breaking spaces with normal spaces

--- a/tex/latex/appendices/risks.tex
+++ b/tex/latex/appendices/risks.tex
@@ -1,6 +1,6 @@
 \chapter{Risk Assessment}
 
-The project''s risk assessment is shown opposite, with a red/amber/green traffic  light scheme supporting the impact scores for ease of reference.
+The project's risk assessment is shown opposite, with a red/amber/green traffic light scheme supporting the impact scores for ease of reference.
 
 \begin{landscape}
 \begin{center}
