--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -6,6 +6,7 @@
 \usepackage{natbib}            % Use Natbib style for the refs.
 \usepackage{array}
 \usepackage{pdflscape}
+\usepackage{pgfgantt}
 \usepackage{enumitem}       % For making numbered indent lists
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
@@ -39,6 +40,9 @@
 	%% ----------------------------------------------------------------
 	% Introduction chapter
 	\input{intro/intro}
+
+	% Project Management Chapter
+	\input{project/project}
 	
 	% Software chapter
 	\input{software/software}
