Add names to title page, as per report requirements

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -17,9 +17,25 @@
 \begin{document}
 	\frontmatter
 	\title{TEST TITLE}
-	\authors    {\texorpdfstring
-		{\href{mailto:S.R.Gunn@ecs.soton.ac.uk}{Steve R. Gunn}}
-		{Steve R. Gunn}
+	\authors    {\\ \texorpdfstring
+		{\href{mailto:djap1g11@ecs.soton.ac.uk}{Daniel J. A. Playle}}
+		{Daniel J. A. Playle}
+		\\
+		\texorpdfstring
+		{\href{mailto:ams2g11@ecs.soton.ac.uk}{Emily Shepherd}}
+		{Emily Shepherd}
+		\\
+		\texorpdfstring
+		{\href{mailto:mg8g12@ecs.soton.ac.uk}{Mohit Gupta}}
+		{Mohit Gupta}
+		\\
+		\texorpdfstring
+		{\href{mailto:tlf1g12@ecs.soton.ac.uk}{Toby Finch}}
+		{Toby Finch}
+		\\
+		\texorpdfstring
+		{\href{mailto:cp10g12@ecs.soton.ac.uk}{Calin Pasat}}
+		{Calin Pasat}
 	}
 	\addresses  {\groupname\\\deptname\\\univname}
 	\date       {\today}
