--- a/tex/latex/software/exercise-detection.tex
+++ b/tex/latex/software/exercise-detection.tex
@@ -1,4 +1,4 @@
-\namedsection{Exercise Detection}{Daniel Playle}
+\namedsection{Exercise Detection}{Playle}
 % This section discusses the exercise detection aspects of the software
 % You can probably see where this is going...
 % Blah blah can do exercise detection with X
@@ -10,4 +10,10 @@
 	% Several methods of detecting exercise
 	% 
 	
-	Exercise detection is a key aspect of the of the project, and a focus on foot exercises was required. 
+	Exercise detection is a key aspect of the of the project, and a focus on foot exercises was required. As such, research into the methods of activity classification using kinematic sensors (accelerometer and gyroscope), was performed to determine the feasible methods of attaining performance that could be considered acceptable.
+	
+	In many cases, research involving activity classification using kinematic sensors for low-power constrained devices typically focus on mobile phones. While not all research in this area is applicable to ultra-low-power sub-threshold microcontrollers, the same techniques can be applied.
+	
+	\cite{kwapisz2011activity} discusses methods of activity classification using a mobile phone accelerometer, describing the potential for a wide-range of activity recognition using a mobile phone in a pocket. Although the activities classified tended to involve more differentiable activity levels, such as walking, jogging and sitting, as opposed to sitting and rotating a foot, because the machine learning was used to obtain results with around 90\% accuracy, it suggests that machine learning for a low-power device is certainly feasible. \todo{Consider reword}
+	
+	
