--- a/tex/latex/software/machine-learning.tex
+++ b/tex/latex/software/machine-learning.tex
@@ -1,1 +1,13 @@
-\section{Machine Learning}
+\namedsection{Machine Learning}{Playle}
+
+\note{What experiments were conducted in order to determine machine learning feasibility?}
+
+\note{Why did we use 3 classes rather than just 2?}
+
+\note{What classification algorithms were trialled? What kind of results were achieved with these. Explain and discuss the workings of each algorithm / type of algorithm.}
+
+\note{What issues were faced as a result of implementing a machine learning algorithm on a constrained system? How were these problems overcome?}
+
+\note{What tools were used in order to assist with the machine learning?}
+
+\note{As a result of the user study, how did the results change? Note observed results due to the user study.}
