Starting talking about software development

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -7,6 +7,7 @@
 \usepackage{array}
 \usepackage{pdflscape}
 \usepackage{pgfgantt}
+\usepackage{pgfplots}
 \usepackage{enumitem}       % For making numbered indent lists
 \usepackage{color}
 \usepackage{todonotes}
@@ -69,6 +70,7 @@
 	\input{software/software}
 	\input{software/exercise-detection}
 	\input{software/machine-learning}
+	\input{software/development}
 
 	% Hardware chapter
 	\input{hardware/hardware}
