--- a/tex/latex/software/machine-learning.tex
+++ b/tex/latex/software/machine-learning.tex
@@ -1,3 +1,4 @@
+\label{ml}
 \namedsection{Machine Learning}{Playle}
 
 \note{What experiments were conducted in order to determine machine learning feasibility?}
