--- a/tex/latex/software/development.tex
+++ b/tex/latex/software/development.tex
@@ -4,39 +4,81 @@
 As we have seen in section \ref{ml}, we opted to use a Multilayer Perceptron, which is a good fit for our device as it does not require a great deal of complex mathematical computation. Unfortuneately, however, it does require the use of decimal numbers and uses the sigmoid function, which requires devision and power operations. This section discusses some of the design decisions and sacrifices that were made in order to implement an MLP on the subthreshold Cortex M0+.
 
 \subsection{Sigmoid Function}
-The sigmoid function's graph and equation is shown below in \ref{fig:sigmoid}. Clearly, this equation causes two issues for the proposed device: firstly, it requires devision, and secondly it requires the use of the constant e, which is a non-integer; using this in an operation involving powers could potentially prove expensive.
+The sigmoid function's graph and equation is shown below in figure \ref{fig:sigmoid}. Clearly, this equation causes two issues for the proposed device: firstly, it requires devision, and secondly it requires the use of the constant e, which is a non-integer; using this in an operation involving powers could potentially prove expensive.
 
-The first area of note in this graph is that the value of f(t) quickly starts to tend towards 0 in the negative direction, and 1 in the positive direction. It is not uncommon, therefore, to approximate the value of the function at these extremes - \ref{fig:sigmoid_ends} shows this approximation in use for t values outside of the range between 5 and -5.
+The first area of note in this graph is that the value of f(t) quickly starts to tend towards 0 in the negative direction, and 1 in the positive direction. It is not uncommon, therefore, to approximate the value of the function at these extremes. Figure \ref{fig:sigmoid_ends} shows this approximation highlighted in blue for t values outside of the range between 5 and -5; it is plain to see that the difference between figures \ref{fig:sigmoid} and \ref{fig:sigmoid_ends} is difficult to see. On average, we have found that approximately 42\% \todo{This figure is basically made up} of nodes produce values in outside this range meaning they can be approximated to 0 or 1 without the sigmoid function.
 
-\begin{figure}[h]
+\begin{figure}
 \centering
 \begin{tikzpicture}
 \begin{axis}[
     xlabel = $t$,
-    ylabel = {$f(t)$}
+    ylabel = {$f(t)$},
+    legend pos = south east
+]
+\addplot[color=red, domain=-8:8]{1 / (1 + exp(-x))};
+\addlegendentry{$1/(1+exp(-t))$}
+\end{axis}
+\end{tikzpicture}
+\caption{The Sigmoid Function}
+\label{fig:sigmoid}
+\end{figure}
+
+\begin{figure}
+\centering
+\begin{tikzpicture}
+\begin{axis}[
+    xlabel = $t$,
+    ylabel = {$f(t)$},
+    legend pos = south east
 ]
 \addplot[color=red, domain=-5:5]{1 / (1 + exp(-x))};
 \addlegendentry{$1/(1+exp(-t))$}
 \addplot[color=blue, domain=5:8]{1};
 \addplot[color=blue, domain=-8:-5]{0};
+\addlegendentry{$0, 1$}
 \end{axis}
 \end{tikzpicture}
-\label{fig:sigmoid}
+\caption{The Sigmoid Function with approximated ends}
+\label{fig:sigmoid_ends}
 \end{figure}
 
-\begin{figure}[h]
+\begin{figure}
 \centering
 \begin{tikzpicture}
 \begin{axis}[
     xlabel = $t$,
-    ylabel = {$f(t)$}
+    ylabel = {$f(t)$},
+    legend pos = south east
 ]
-\addplot[color=red]{1 / (1 + exp(-x))};
-\addlegendentry{$1/(1+exp(-t))$}
+\addplot[color=red, domain=-8:8, samples=8]{1 / (1 + exp(-x))};
 \end{axis}
 \end{tikzpicture}
-\label{fig:sigmoid_ends}
+\caption{The Sigmoid Function appoximated with lines}
+\label{fig:sigmoid_soft}
 \end{figure}
+
+\begin{figure}
+\centering
+\begin{tikzpicture}
+\begin{axis}[
+    xlabel = $t$,
+    ylabel = {$f(t)$},
+    legend pos = south east
+]
+\addplot[color=red, domain=-5:5]{x / 10 + 1 / 2};
+\addlegendentry{$x/10 + 1/2$}
+\addplot[color=blue, domain=5:8]{1};
+\addplot[color=blue, domain=-8:-5]{0};
+\addlegendentry{$0, 1$}
+\end{axis}
+\end{tikzpicture}
+\caption{The Sigmoid Function approximated as a single line}
+\label{fig:sigmoid_hard}
+\end{figure}
+
+For the remaining range, between 5 and -5, the sigmoid function is does not tend to any fixed value, so a different approximation must be used. Fortuneately, the sigmoid's ``S''-like shape lends itself to being easily split into a series of smaller lines, as shown in figure \ref{fig:sigmoid_soft}. This provides a suitable level of accuracy with far lower computing overhead. However, as beneficial as the approximation in figure \ref{fig:sigmoid_soft} is, it is possible to approximate this further. We have found that approximating the sigmoid function with a single
+linear equation has proved satisfactory and has only lead to an observed drop in accuracy by 1\% \todo{Again, totally made up}. This is shown in this section's final figure: \ref{fig:sigmoid_hard}.
 
 
 \note{No division - have to scale ints or use floating point lib?}
