Add another note

--- a/tex/latex/software/machine-learning.tex
+++ b/tex/latex/software/machine-learning.tex
@@ -1,6 +1,8 @@
 \label{ml}
 \namedsection{Machine Learning}{Playle}
 
+\note{How exactly does the machine learning algorithm work? Reference papers that describe these methods.}
+
 \note{What experiments were conducted in order to determine machine learning feasibility?}
 
 \note{Why did we use 3 classes rather than just 2?}
