Add exercises figure and citations

--- a/tex/latex/bib.bib
+++ b/tex/latex/bib.bib
@@ -19,3 +19,17 @@ Speaks about the feasibility of recognising foot gestures using an accelerometer
 	year={2010},
 	organization={ACM}
 }
+
+@MISC{NHS2014DVT,
+  author = {NHS},
+  title = {Deep vein thrombosis},
+  year = {2014},
+  url = {http://www.nhs.uk/conditions/deep-vein-thrombosis/pages/introduction.aspx}
+}
+
+@MISC{virgin2015exercises,
+  author = {Virgin Atlantic},
+  title = {Inflight exercise},
+  year = {2015},
+  url = {http://www.virgin-atlantic.com/gb/en/travel-information/your-health/inflight-exercise.html}
+}
