Add some content for machine learning

--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -11,6 +11,8 @@
 \usepackage{enumitem}       % For making numbered indent lists
 \usepackage{color}
 \usepackage{todonotes}
+\usepackage{tikz}
+\usetikzlibrary{automata,positioning}
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 %\input{Definitions}            % Include your abbreviations
