--- a/tex/latex/bib.bib
+++ b/tex/latex/bib.bib
@@ -33,3 +33,13 @@ Speaks about the feasibility of recognising foot gestures using an accelerometer
   year = {2015},
   url = {http://www.virgin-atlantic.com/gb/en/travel-information/your-health/inflight-exercise.html}
 }
+
+Discusses using SVMs on phones and the challenges of doing so
+@incollection{anguita2012human,
+	title={Human activity recognition on smartphones using a multiclass hardware-friendly support vector machine},
+	author={Anguita, Davide and Ghio, Alessandro and Oneto, Luca and Parra, Xavier and Reyes-Ortiz, Jorge L},
+	booktitle={Ambient assisted living and home care},
+	pages={216--223},
+	year={2012},
+	publisher={Springer}
+}
